--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "@expo/vector-icons": "^6.2.1",
     "lodash": "^4.17.4",
+    "prop-types": "^15.6.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-flip-card": "^3.5.2",
     "react-navigation": "^2.11.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
