--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^27.0.1",
     "@expo/vector-icons": "^6.2.1",
+    "babel-eslint": "^8.0.3",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "expo": "^27.0.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "16.3.1",
+    "js-yaml": "^3.10.0",
     "react-native": "~0.55.2",
     "react-native-flip-card": "^3.5.2",
     "react-navigation": "^2.11.2",
